<resources>
    <string name="app_name">My PoC App</string>
    <string name="name_user">Name</string>
    <string name="acc_name">User</string>
    <string name="mask_name">teste@teste.com.br</string>
    <string name="acc_password">Password</string>
    <string name="mask_pass">********</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="remember_me">Remember me</string>
    <string name="singin">Sing In</string>
    <string name="create_account">Create Account</string>
    <string name="todo">TODO</string>
    <string name="logo">Logo</string>
    <string name="create_contact">Create Contact</string>
    <string name="contact_email">Email</string>
    <string name="plus">+</string>
</resources>