<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/login_background">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#EEE"
        android:text="@string/acc_name" />

    <EditText
        android:id="@+id/et_user"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_ed_background"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:textColor="@color/accent"
        android:textColorHint="#CCC"
        android:hint="@string/mask_name"
        android:autofillHints=""
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#EEE"
        android:text="@string/acc_password"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/login_ed_background"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:textColor="@color/accent"
        android:textColorHint="#CCC"
        android:hint="@string/mask_pass"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/remember_me"
        android:textColor="@color/accent"
        android:theme="@color/accent"
        android:textSize="6pt"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background"
        android:text="@string/singin"
        android:textColor="@color/accent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>

    <Button
        android:id="@+id/btn_new_acc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background"
        android:text="@string/create_account"
        android:textColor="@color/accent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>

    <TextView
        android:id="@+id/tv_remember_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:text="@string/forgot_password"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>

</ScrollView>